--- a/.drone.yml
+++ b/.drone.yml
@@ -28,7 +28,7 @@ steps:
   - name: test
     image: golang:latest
     commands:
-      - go test -v ./...
+      - make test
     volumes:
       - name: gopath
         path: /go
